Changes title in html template

--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">
 <head>
-	<title>Results First Clearinghouse Database | The Pew Charitable Trusts</title>
+	<title>A Tool for Better Debt Comparisons | The Pew Charitable Trusts</title>
 
 	<meta charset="UTF-8" />
 	<meta name="HandheldFriendly" content="True" />
@@ -275,7 +275,7 @@
     <div class="container__inner">
             <header class="page-title">
         <h1 class="page-title__title">
-TITLE TITLE TITLE TITLE</h1>
+A Tool for Better Debt Comparisons</h1>
         </header>
 <div class="page-metadata">
 
