--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -378,7 +378,7 @@ Data Visualization
 
 
     <main role="main" id="pew-app" class="pct-section no-js">
-    <!--<script crossorigin="anonymous" src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch,Promise,WebAnimations,Element.prototype.classList,Array.prototyp.find"></script>-->
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CNodeList.prototype.forEach%2CElement.prototype.classList%2CString.prototype.includes%2CArray.prototype.find%2CrequestAnimationFrame"></script>
 
     </main>
     <div class="clearfix"></div>
