--- a/preview/index.html
+++ b/preview/index.html
@@ -654,7 +654,7 @@
 
 
 
-    <link href="css/styles.css?v=edae8e" rel="stylesheet">
+    <link href="css/styles.css?v=c0cace" rel="stylesheet">
   </head>
 
   <body class="has-hover">
@@ -1316,7 +1316,7 @@ Data Visualization
                             </ul>
                           </div>
                         </div></label></div>
-                    <div id="explainer-wrapper" style="height: 69px;">
+                    <div id="explainer-wrapper" style="height: 68px;">
                       <div id="field-explainer" class="">
                         <p><strong>Debt as a percentage of state personal income.</strong> Total debt relative to state personal income, a measure of economic resources. For more information, please see “About the Data” below.</p>
                       </div>
@@ -2824,7 +2824,7 @@ RELATED		</span>
 
     <script type="text/javascript" src="js/index.js"></script>
     <script src="https://analytics.twitter.com/i/adsct?p_id=Twitter&amp;p_user_id=0&amp;txn_id=nzc7z&amp;events=%5B%5B%22pageview%22%2Cnull%5D%5D&amp;tw_sale_amount=0&amp;tw_order_quantity=0&amp;tw_iframe_status=0&amp;tpx_cb=twttr.conversion.loadPixels&amp;tw_document_href=http%3A%2F%2Flocalhost%3A8000%2F" type="text/javascript"></script>
-    <script src="https://px.ads.linkedin.com/collect/?time=1556127895147&amp;pid=230521&amp;url=http%3A%2F%2Flocalhost%3A8000%2F&amp;fmt=js&amp;s=1" type="text/javascript"></script>
+    <script src="https://px.ads.linkedin.com/collect/?time=1556128284333&amp;pid=230521&amp;url=http%3A%2F%2Flocalhost%3A8000%2F&amp;fmt=js&amp;s=1" type="text/javascript"></script>
     <div class="explore-module__modal-container">
       <div class="explore-module__modal-inner">
         <div class="explore-module__close-modal js-close-explore-module">
