Fixes randomizing on prerender; new style for scrolled to section; new preview builds

--- a/preview/index.html
+++ b/preview/index.html
@@ -654,7 +654,7 @@
 
 
 
-    <link href="css/styles.css?v=46b3b9" rel="stylesheet">
+    <link href="css/styles.css?v=4b0ca3" rel="stylesheet">
   </head>
 
   <body class="has-hover">
@@ -1061,9 +1061,7 @@ Data Visualization
                           <h4 class="src-views-state-comparison--typeHeader src-views-state-comparison--withTooltip" data-field="debt_limit_type" data-content="The kind of limit the state has on general obligation borrowing, one of the most common types of debt issued by states. These limits affect how states borrow." tabindex="0">General obligation debt limit type</h4>
                           <div class="js-text-compare-debt_limit_type">
                             <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">U.S. Median: <span class="src-components-comparison--compareColor1">N/A</span></p>
-                            <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">Minnesota: <span class="src-components-comparison--compareColor2">Referendum and/or Supermajority</span></p>
-                            </p>
+                            <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">Alabama: <span class="src-components-comparison--compareColor2">Constitutional Amendment</span></p>
                           </div>
                         </div>
                         <div class="src-views-state-comparison--typeDiv undefined">
@@ -1082,10 +1080,14 @@ Data Visualization
                               </div>
 
 
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">Minnesota</p>
+                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">
+                                Alabama
+                              </p>
                               <div class="src-components-comparison--barContainer src-components-comparison--barContainer2">
-                                <div class="js-bar-compare-centralization-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.639);"></div>
-                                <div class="src-components-comparison--dataLabel" style="transform: translateX(63.9%);">63.9%</div>
+                                <div class="js-bar-compare-centralization-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.653);"></div>
+                                <div class="src-components-comparison--dataLabel" style="transform: translateX(65.3%)">
+                                  65.3%
+                                </div>
                               </div>
 
                             </div>
@@ -1107,10 +1109,14 @@ Data Visualization
                               </div>
 
 
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">Minnesota</p>
+                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">
+                                Alabama
+                              </p>
                               <div class="src-components-comparison--barContainer src-components-comparison--barContainer2">
-                                <div class="js-bar-compare-state_local_division-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.6735);"></div>
-                                <div class="src-components-comparison--dataLabel" style="transform: translateX(67.3%);">67.4%</div>
+                                <div class="js-bar-compare-state_local_division-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.7008);"></div>
+                                <div class="src-components-comparison--dataLabel" style="transform: translateX(70.1%)">
+                                  70.1%
+                                </div>
                               </div>
 
                             </div>
@@ -1137,10 +1143,14 @@ Data Visualization
                               </div>
 
 
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">Minnesota</p>
+                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">
+                                Alabama
+                              </p>
                               <div class="src-components-comparison--barContainer src-components-comparison--barContainer2">
-                                <div class="js-bar-compare-revenue_volatility-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.0974212);"></div>
-                                <div class="src-components-comparison--dataLabel" style="transform: translateX(9.7%);">6.1</div>
+                                <div class="js-bar-compare-revenue_volatility-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.0544413);"></div>
+                                <div class="src-components-comparison--dataLabel" style="transform: translateX(5.4%)">
+                                  4.6
+                                </div>
                               </div>
 
                             </div>
@@ -1162,10 +1172,14 @@ Data Visualization
                               </div>
 
 
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">Minnesota</p>
+                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">
+                                Alabama
+                              </p>
                               <div class="src-components-comparison--barContainer src-components-comparison--barContainer2">
-                                <div class="js-bar-compare-ten_year_pop_growth-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.0628);"></div>
-                                <div class="src-components-comparison--dataLabel" style="transform: translateX(6.3%);">6.3%</div>
+                                <div class="js-bar-compare-ten_year_pop_growth-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.0332);"></div>
+                                <div class="src-components-comparison--dataLabel" style="transform: translateX(3.3%)">
+                                  3.3%
+                                </div>
                               </div>
 
                             </div>
@@ -1192,10 +1206,14 @@ Data Visualization
                               </div>
 
 
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">Minnesota</p>
+                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">
+                                Alabama
+                              </p>
                               <div class="src-components-comparison--barContainer src-components-comparison--barContainer2">
-                                <div class="js-bar-compare-debt_per_capita-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.214401);"></div>
-                                <div class="src-components-comparison--dataLabel" style="transform: translateX(21.4%);">$3,055</div>
+                                <div class="js-bar-compare-debt_per_capita-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.095079);"></div>
+                                <div class="src-components-comparison--dataLabel" style="transform: translateX(9.5%)">
+                                  $1,839
+                                </div>
                               </div>
 
                             </div>
@@ -1217,10 +1235,14 @@ Data Visualization
                               </div>
 
 
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">Minnesota</p>
+                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabel2">
+                                Alabama
+                              </p>
                               <div class="src-components-comparison--barContainer src-components-comparison--barContainer2">
-                                <div class="js-bar-compare-debt_percent_SPI-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.0597);"></div>
-                                <div class="src-components-comparison--dataLabel" style="transform: translateX(6%);">6.0%</div>
+                                <div class="js-bar-compare-debt_percent_SPI-1 src-components-bar--bar src-components-bar--barColor2" style="transform: translateX(0px) scaleX(0.0481);"></div>
+                                <div class="src-components-comparison--dataLabel" style="transform: translateX(4.8%)">
+                                  4.8%
+                                </div>
                               </div>
 
                             </div>
@@ -1235,18 +1257,14 @@ Data Visualization
                           <h4 class="src-views-state-comparison--typeHeader src-views-state-comparison--withTooltip" data-field="credit2015" data-content="Standard &amp; Poor’s general obligation or issuer credit rating." tabindex="0">2015</h4>
                           <div class="js-text-compare-credit2015">
                             <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">U.S. Median: <span class="src-components-comparison--compareColor1">N/A</span></p>
-                            <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">Minnesota: <span class="src-components-comparison--compareColor2">AA+</span></p>
-                            </p>
+                            <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">Alabama: <span class="src-components-comparison--compareColor2">AA</span></p>
                           </div>
                         </div>
                         <div class="src-views-state-comparison--typeDiv src-views-state-comparison--credit2018">
                           <h4 class="src-views-state-comparison--typeHeader src-views-state-comparison--withTooltip" data-field="credit2018" data-content="Standard &amp; Poor’s general obligation or issuer credit rating." tabindex="0">2018</h4>
                           <div class="js-text-compare-credit2018">
                             <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">U.S. Median: <span class="src-components-comparison--compareColor1">N/A</span></p>
-                            <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">
-                              <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">Minnesota: <span class="src-components-comparison--compareColor2">AAA</span></p>
-                            </p>
+                            <p class="src-components-comparison--chartLabel src-components-comparison--chartLabelText">Alabama: <span class="src-components-comparison--compareColor2">AA</span></p>
                           </div>
                         </div>
                       </div>
@@ -2588,69 +2606,6 @@ RELATED		</span>
         </div>
       </section>
     </div>
-    <script type="text/javascript" id="">
-      (function(e, g, h, d, a, b, c) {
-        e.GoogleAnalyticsObject = a;
-        e[a] = e[a] || function() {
-          (e[a].q = e[a].q || []).push(arguments)
-        };
-        e[a].l = 1 * new Date;
-        b = g.createElement(h);
-        c = g.getElementsByTagName(h)[0];
-        b.async = 1;
-        b.src = d;
-        c.parentNode.insertBefore(b, c)
-      })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
-      var gaParams = function() {
-        function e(a) {
-          return "innerText" in document.body ? a.innerText.trim() : a.textContent.trim()
-        }
-        if (!document.querySelectorAll) {
-          var g = document,
-            h = g.createStyleSheet();
-          g.querySelectorAll = function(a, b, c, d, e) {
-            e = g.all;
-            b = [];
-            a = a.replace(/\[for\b/gi, "[htmlFor").split(",");
-            for (c = a.length; c--;) {
-              h.addRule(a[c], "k:v");
-              for (d = e.length; d--;) e[d].currentStyle.k && b.push(e[d]);
-              h.removeRule(0)
-            }
-            return b
-          }
-        }
-        String.prototype.trim || (String.prototype.trim = function() {
-          return this.replace(/^\s+|\s+$/g, "")
-        });
-        var d = [];
-        document.querySelectorAll(".pct-download").length && d.push("Download");
-        document.querySelectorAll(".pct-expand-more").length && d.push("More Toggle");
-        document.querySelectorAll("iframe[src*\x3dyoutube]").length && d.push("YouTube");
-        d = d.length ? d.join(", ") : "(not set)";
-        var a = document.querySelectorAll(".js-main-primary").length ? document.querySelectorAll(".js-main-primary") : document.querySelectorAll(".main-primary").length ? document.querySelectorAll(".main-primary") : document.querySelectorAll(".main-content"),
-          b = a.length ? e(a[0]).split(" ").length : "(not set)";
-        var c = google_tag_manager["GTM-W2Z5TT"].macro(1);
-        var f = google_tag_manager["GTM-W2Z5TT"].macro(2),
-          k = google_tag_manager["GTM-W2Z5TT"].macro(3),
-          l = google_tag_manager["GTM-W2Z5TT"].macro(4),
-          m = google_tag_manager["GTM-W2Z5TT"].macro(5),
-          n = google_tag_manager["GTM-W2Z5TT"].macro(6);
-        b <= c ? c = "0 - " + c : b > c && b <= f ? (c += 1, c = c + " - " + f) : b > f && b <= k ? (f += 1, c = f + " - " + k) : b > k && b <= l ? (k += 1, c = k + " - " + l) : b > l && b <= m ? (l += 1, c = l + " - " + m) : b > m && b <= n ? (m += 1, c = m + " - " + n) : b > n ? (n += 1, c = n + " + ") : c = "Not Defined";
-        a = a.length ? a[0].querySelectorAll("img").length : "(not set)";
-        f = 0 == a ? "0" : 1 == a ? "1" : 2 == a ? "2" : 3 == a ? "3" : 4 == a ?
-          "4" : 5 == a ? "5" : 6 == a ? "6" : 7 == a ? "7" : 8 == a ? "8" : 9 == a ? "9" : 9 < a ? "10+" : "Not Defined";
-        dataLayer.push({
-          event: "pageVarPush",
-          engagementOptions: d,
-          wordCount: b,
-          wordCountGroup: c,
-          imgCount: a,
-          imgCountGroup: f
-        })
-      };
-      gaParams();
-    </script>
     <footer class="global-footer" role="contentinfo">
       <div class="container container--bleed container--footer-top">
         <div class="container__col">
@@ -2879,7 +2834,7 @@ RELATED		</span>
     </div>
 
     <script type="text/javascript" src="js/index.js"></script>
-    <script src="https://px.ads.linkedin.com/collect/?time=1556222193179&amp;pid=230521&amp;url=http%3A%2F%2Flocalhost%3A8000%2F&amp;fmt=js&amp;s=1" type="text/javascript"></script>
+    <script src="https://px.ads.linkedin.com/collect/?time=1556301773883&amp;pid=230521&amp;url=http%3A%2F%2Flocalhost%3A8000%2F&amp;fmt=js&amp;s=1" type="text/javascript"></script>
     <script src="https://analytics.twitter.com/i/adsct?p_id=Twitter&amp;p_user_id=0&amp;txn_id=nzc7z&amp;events=%5B%5B%22pageview%22%2Cnull%5D%5D&amp;tw_sale_amount=0&amp;tw_order_quantity=0&amp;tw_iframe_status=0&amp;tpx_cb=twttr.conversion.loadPixels&amp;tw_document_href=http%3A%2F%2Flocalhost%3A8000%2F" type="text/javascript"></script>
     <div class="explore-module__modal-container">
       <div class="explore-module__modal-inner">
@@ -2913,6 +2868,69 @@ RELATED		</span>
         </div>
       </div>
     </div>
+    <script type="text/javascript" id="">
+      (function(e, g, h, d, a, b, c) {
+        e.GoogleAnalyticsObject = a;
+        e[a] = e[a] || function() {
+          (e[a].q = e[a].q || []).push(arguments)
+        };
+        e[a].l = 1 * new Date;
+        b = g.createElement(h);
+        c = g.getElementsByTagName(h)[0];
+        b.async = 1;
+        b.src = d;
+        c.parentNode.insertBefore(b, c)
+      })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
+      var gaParams = function() {
+        function e(a) {
+          return "innerText" in document.body ? a.innerText.trim() : a.textContent.trim()
+        }
+        if (!document.querySelectorAll) {
+          var g = document,
+            h = g.createStyleSheet();
+          g.querySelectorAll = function(a, b, c, d, e) {
+            e = g.all;
+            b = [];
+            a = a.replace(/\[for\b/gi, "[htmlFor").split(",");
+            for (c = a.length; c--;) {
+              h.addRule(a[c], "k:v");
+              for (d = e.length; d--;) e[d].currentStyle.k && b.push(e[d]);
+              h.removeRule(0)
+            }
+            return b
+          }
+        }
+        String.prototype.trim || (String.prototype.trim = function() {
+          return this.replace(/^\s+|\s+$/g, "")
+        });
+        var d = [];
+        document.querySelectorAll(".pct-download").length && d.push("Download");
+        document.querySelectorAll(".pct-expand-more").length && d.push("More Toggle");
+        document.querySelectorAll("iframe[src*\x3dyoutube]").length && d.push("YouTube");
+        d = d.length ? d.join(", ") : "(not set)";
+        var a = document.querySelectorAll(".js-main-primary").length ? document.querySelectorAll(".js-main-primary") : document.querySelectorAll(".main-primary").length ? document.querySelectorAll(".main-primary") : document.querySelectorAll(".main-content"),
+          b = a.length ? e(a[0]).split(" ").length : "(not set)";
+        var c = google_tag_manager["GTM-W2Z5TT"].macro(1);
+        var f = google_tag_manager["GTM-W2Z5TT"].macro(2),
+          k = google_tag_manager["GTM-W2Z5TT"].macro(3),
+          l = google_tag_manager["GTM-W2Z5TT"].macro(4),
+          m = google_tag_manager["GTM-W2Z5TT"].macro(5),
+          n = google_tag_manager["GTM-W2Z5TT"].macro(6);
+        b <= c ? c = "0 - " + c : b > c && b <= f ? (c += 1, c = c + " - " + f) : b > f && b <= k ? (f += 1, c = f + " - " + k) : b > k && b <= l ? (k += 1, c = k + " - " + l) : b > l && b <= m ? (l += 1, c = l + " - " + m) : b > m && b <= n ? (m += 1, c = m + " - " + n) : b > n ? (n += 1, c = n + " + ") : c = "Not Defined";
+        a = a.length ? a[0].querySelectorAll("img").length : "(not set)";
+        f = 0 == a ? "0" : 1 == a ? "1" : 2 == a ? "2" : 3 == a ? "3" : 4 == a ?
+          "4" : 5 == a ? "5" : 6 == a ? "6" : 7 == a ? "7" : 8 == a ? "8" : 9 == a ? "9" : 9 < a ? "10+" : "Not Defined";
+        dataLayer.push({
+          event: "pageVarPush",
+          engagementOptions: d,
+          wordCount: b,
+          wordCountGroup: c,
+          imgCount: a,
+          imgCountGroup: f
+        })
+      };
+      gaParams();
+    </script>
   </body>
 
 </html>
