--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!-- EMBED CODE STARTS HERE -->
-<main role="main" id="pew-app" class="pct-section no-js">
-    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CNodeList.prototype.forEach%2CElement.prototype.classList%2CString.prototype.includes%2CArray.prototype.find%2CrequestAnimationFrame"></script>
-    <% for (var css in htmlWebpackPlugin.files.css) { %>
-    <link class="emitted-css" href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
-    <% } %>
-</main>
+<div class="rich-text">
+    <main role="main" id="pew-app" class="pct-section no-js">
+        <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CNodeList.prototype.forEach%2CElement.prototype.classList%2CString.prototype.includes%2CArray.prototype.find%2CrequestAnimationFrame"></script>
+        <% for (var css in htmlWebpackPlugin.files.css) { %>
+        <link class="emitted-css" href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+        <% } %>
+    </main>
+</div>
 <div class="clearfix"></div>
 <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
 <script class="emitted-bundle" src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
